--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+ed2k-hash (0.3.2-1) unstbale; urgency=low
+
+  * builds on MacOSX now
+
+ -- Tim-Philipp Müller <t.i.m@orange.net>  Tue,   11 Dec 2002 18:55:00 +0000
+
 ed2k-hash (0.3.1-1) unstable; urgency=low
 
   * First debian release.
