* AUTHORS: 	  Convert to UTF-8. 	* configure.ac: 	  Bump version to 0.5.0.

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,6 +1,6 @@
 Original Author:
 ----------------
-Tim-Philipp Müller <t.i.m@orange.net>
+Tim-Philipp MÃ¼ller <t.i.m@orange.net>
 
 Contributors:
 -------------
